src/main/metadata-excluded/objects/Defect__c.object
<CustomObject>
    <description>PMO: for testing app, tracking develop bug.
Responsible persons：Samuel Liu</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Comment__c</fullName>
        <label>Close Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Category__c</fullName>
        <label>Defect Category</label>
        <picklist>
            <picklistValues>
                <fullName>Environment Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Workbook Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Case Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Go Live</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_description__c</fullName>
        <label>Defect Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detected_in_Cycle__c</fullName>
        <label>Detected in Cycle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detected_in_Release__c</fullName>
        <label>Detected in Release</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_in_Version__c</fullName>
        <label>Detected in Version</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_on_Date__c</fullName>
        <label>Detected on Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <label>FAQ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Test Case</label>
        <referenceTo>Test_Cases__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed and Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWB Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Reproducible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_step1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test step1</label>
        <referenceTo>Test_step1__c</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Phase__c</fullName>
        <label>Testing Phase</label>
        <picklist>
            <picklistValues>
                <fullName>System Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train the Trainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All_AU_Defects</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Related_Test_Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All-AU-Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Defects</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Related_Test_Case__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Detected_in_Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>All-Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Defects_CR</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <filters>
            <field>Defect_Category__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Duplicate,Deployed and Verified,Closed</value>
        </filters>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT Round 1</value>
        </filters>
        <label>All-CR - Masson</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_MY_AU_FIXED_Defects</fullName>
        <columns>NAME</columns>
        <columns>Related_Test_Case__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Sabine Jonientz</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed,Reopen</value>
        </filters>
        <label>All-MY-AU-Fixed-Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UAT_Round_1_Defect</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>contains</operation>
            <value>UAT Round</value>
        </filters>
        <label>All UAT Round 1 Defect</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EP</fullName>
        <booleanFilter>2 AND (1 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Falk Lehmann</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Valentin Iliu</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Valentin Mihai Padurean</value>
        </filters>
        <label>EP</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>Integration_Test</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>notEqual</operation>
            <value>,System Testing,UAT</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notContain</operation>
            <value>Falk</value>
        </filters>
        <label>Integration Test</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Closed_Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Close_Comment__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>Not Closed Defects</label>
    </listViews>
    <listViews>
        <fullName>Open_Defects_Jack</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Testing_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT Round 1,UAT Round 2,UAT Round 3</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Fixed,Deployed,Deployed and Verified,Closed</value>
        </filters>
        <filters>
            <field>Defect_Category__c</field>
            <operation>notEqual</operation>
            <value>Change Request</value>
        </filters>
        <label>UAT_Defects_Not_Fixed_Jack</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ST_Defect</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_To__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Test_Case__c</field>
            <operation>startsWith</operation>
            <value>ST</value>
        </filters>
        <label>ST Defect</label>
    </listViews>
    <listViews>
        <fullName>Sam_s_Defect</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>wang sam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Open,Reopen</value>
        </filters>
        <label>Sam&apos;s Defect</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_bug</fullName>
        <columns>NAME</columns>
        <columns>Test_step1__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Iliu Valentin</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Iliu&apos;s Deffects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UAT_Defects_Round_2</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT Round 2</value>
        </filters>
        <label>UAT Defects Round 2</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>UAT_Deployed_Verified</fullName>
        <columns>NAME</columns>
        <columns>Defect_Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed,Deployed,Deployed and Verified</value>
        </filters>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT Round 1,UAT Round 2,UAT Round 3</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>UAT_Deployed_Verified</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>Unclosed_defect</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>wang sam,yin reak,zhang sinow,Yang Kara</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Open,Reopen</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>Unclosed defect</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Defect#{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>